# aiAdventWithLove

./: .gitignore  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MEMORY_IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  README_DOCS.md  pyproject.toml  test_agent_session.py  test_history.py
examples/: use_figma_tool.py  use_mock_api_tool.py  use_scheduler_with_agent.py
src/aiadvent/: main.py  utils.py
src/aiadvent/agent/: agent.py  approval_gates.py  branching.py  cli.py  completion_validator.py  context_compressor.py  history.py  invariants.py  long_term_memory.py  sticky_facts.py  task_state.py  transition_controller.py  user_profile.py
src/aiadvent/agent/core/: __init__.py  history.py
src/aiadvent/agent/features/: __init__.py  invariants.py
src/aiadvent/compare/: compare_models.py
src/aiadvent/mcp_server/: __init__.py  mock_api.py  pipeline_server.py  scheduler_server.py  server.py
src/aiadvent/orchestrator/: __init__.py  cli.py  orchestrator.py
src/aiadvent/pipeline/: cli.py
src/aiadvent/scheduler/: README.md  __init__.py  cli.py  storage.py  task_scheduler.py  worker.py
src/aiadvent/strategies/: strategy_1.py  strategy_2.py  strategy_3.py  strategy_4.py
tests/: test_agent_mcp_integration.py  test_compression_comparison.py  test_controlled_transitions.py  test_figma_tool_invocation.py  test_invariants.py  test_mcp_connection.py  test_memory_basic.py  test_orchestration.py  test_personalization.py  test_pipeline.py  test_scheduler_basic.py  test_strategy_comparison.py  test_task_state.py  test_token_scenarios.py
(+14 files in other folders)
