[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-advent-with-love"
version = "0.1.0"
description = "A simple CLI tool that asks questions to OpenAI"
authors = [
    {name = "Vedia", email = "you@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ask-ai = "aiadvent.main:main"
compare-models = "aiadvent.compare.compare_models:compare_models"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
